# docker-project-template-py-pipable

./: README.md  check-code  make-release  run-tests  setup.cfg
tests/: test_add.py
