[metadata]
name = example
version = attr: example.__version__
url = https://github.com/zpz/example
description = Package example
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

# `name` must be the name of the package directory in `src/`.
# `__version__` is defined in the `__init__.py` file of the package.


[options]
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >= 3.7
install_requires=
    boltons
    toolz >=0.10.0,<0.11.0
# these dependencies are just examples


[options.packages.find]
where = src


[options.package_data]
example = py.typed
